* fix spacing on projects page

--- a/projects/projects.css
+++ b/projects/projects.css
@@ -65,7 +65,7 @@ div.row.featured {
     background-color: #9998989c;
     padding: 30px 0;
     border-radius: 20px;
-    margin-top: 20px 0;
+    margin: 20px 0;
 }
 
 
